--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
+
 @font-face {
   font-family: SomeTimeLater;
   src: url('../some_time_later.otf');
@@ -11,4 +13,28 @@ body {
   font-size: 1.5rem;
   width: 100vw;
   height: 100vh;
+}
+
+
+.itemContainer {
+  display: flex;
+}
+
+.spinner {
+  position: absolute;
+  border-radius: 50%;
+  align-self: center;
+  animation-name: spin;
+  animation-duration: 2s;
+  animation-direction: normal;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+
+/* Animations */
+@keyframes spin {
+  to {
+    transform: rotate(360deg)
+  }
 }
